fix: height on IPhone 12 Pro screen responsive

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1504,6 +1504,13 @@ body.no-scroll {
 }
 /* Mobile phones */
 @media (max-width: 480px) {
+  .hero-content {
+    min-height: 600px;
+    flex-direction: column;
+    padding: 2rem 1rem;
+    align-items: center;
+  }
+
   .features-container {
     grid-template-columns: repeat(1, 1fr);
   }
